[package]
name = "rpc"
version = "0.1.0"
edition = "2018"

[dependencies]
neovim-lib = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# community suggested few lower level and more modern libs for finer request introspection:
# * https://docs.rs/surf/1.0.2/surf/ # modern
# * https://docs.rs/hyper/0.12.33/hyper/ # lower level - raw request and response
reqwest="*"
strum = "*"
strum_macros = "*"
regex = "*"
html2text = "*"
